# api/docs/swagger.yaml
@@ -1,11 +1,34 @@
-basePath: /api/v1
 definitions:
-  handlers.ErrResponse:
-    properties:
-      error:
-        type: string
+  handlers.ProjectReq:
     type: object
   handlers.RegisterRequest:
+    properties:
+      email:
+        example: johnsmith@example.com
+        type: string
+      firstname:
+        example: john
+        type: string
+      lastname:
+        example: smith
+        type: string
+      password:
+        example: John123!
+        maxLength: 32
+        minLength: 8
+        type: string
+    required:
+    - email
+    - firstname
+    - lastname
+    - password
+    type: object
+  pb.CommonResponse:
+    properties:
+      message:
+        type: string
+      status:
+        type: integer
     type: object
   pb.LoginResponse:
     properties:
@@ -16,6 +39,45 @@ definitions:
       token:
         type: string
     type: object
+  pb.Project:
+    properties:
+      assignees:
+        items:
+          type: integer
+        type: array
+      created_on:
+        type: string
+      creator:
+        type: integer
+      description:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      tasks:
+        items:
+          $ref: '#/definitions/pb.Task'
+        type: array
+      updated_on:
+        type: string
+    type: object
+  pb.ProjectResponse:
+    properties:
+      common_response:
+        $ref: '#/definitions/pb.CommonResponse'
+      project:
+        $ref: '#/definitions/pb.Project'
+    type: object
+  pb.ProjectsResponse:
+    properties:
+      common_response:
+        $ref: '#/definitions/pb.CommonResponse'
+      project:
+        items:
+          $ref: '#/definitions/pb.Project'
+        type: array
+    type: object
   pb.RegisterResponse:
     properties:
       message:
@@ -24,6 +86,36 @@ definitions:
         type: integer
       userID:
         type: integer
+    type: object
+  pb.RemovedProjectResponse:
+    properties:
+      common_response:
+        $ref: '#/definitions/pb.CommonResponse'
+    type: object
+  pb.Status:
+    enum:
+    - 0
+    - 1
+    - 2
+    - 3
+    type: integer
+    x-enum-varnames:
+    - Status_TODO
+    - Status_INPROGRESS
+    - Status_READY
+    - Status_COMPLETED
+  pb.Task:
+    properties:
+      assignee:
+        type: integer
+      creator:
+        type: integer
+      description:
+        type: string
+      id:
+        type: string
+      task_status:
+        $ref: '#/definitions/pb.Status'
     type: object
   pb.ViewUserResponse:
     properties:
@@ -42,22 +134,18 @@ definitions:
       userID:
         type: integer
     type: object
-externalDocs:
-  description: OpenAPI
-  url: https://swagger.io/resources/open-api/
-host: localhost:8080
+  pkg_auth_handlers.ErrResponse:
+    properties:
+      error:
+        type: string
+    type: object
+  pkg_task_handlers.ErrResponse:
+    properties:
+      error:
+        type: string
+    type: object
 info:
-  contact:
-    email: support@swagger.io
-    name: API Support
-    url: http://www.swagger.io/support
-  description: This is a REST server created with Gin.
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  termsOfService: http://swagger.io/terms/
-  title: Task Manager API Gateway
-  version: "1.0"
+  contact: {}
 paths:
   /login:
     post:
@@ -74,7 +162,7 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/handlers.ErrResponse'
+            $ref: '#/definitions/pkg_auth_handlers.ErrResponse'
         "401":
           description: Unauthorized
           schema:
@@ -86,6 +174,152 @@ paths:
       summary: Authenticate user
       tags:
       - users
+  /project:
+    get:
+      consumes:
+      - application/json
+      description: view all project
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/pb.ProjectsResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/pkg_task_handlers.ErrResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/pb.ProjectsResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/pb.ProjectsResponse'
+      summary: View Projects
+      tags:
+      - projects
+    post:
+      consumes:
+      - application/json
+      description: Create a new project
+      parameters:
+      - description: ProjectReq
+        in: body
+        name: requestBody
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.ProjectReq'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/pb.ProjectResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/pkg_task_handlers.ErrResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/pb.ProjectResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/pb.ProjectResponse'
+      summary: Create Project
+      tags:
+      - projects
+  /project/{ID}:
+    delete:
+      consumes:
+      - application/json
+      description: remove a project
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/pb.RemovedProjectResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/pkg_task_handlers.ErrResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/pb.RemovedProjectResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/pb.RemovedProjectResponse'
+      summary: Remove Project
+      tags:
+      - projects
+    get:
+      consumes:
+      - application/json
+      description: view a project by ID
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/pb.ProjectResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/pkg_task_handlers.ErrResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/pb.ProjectResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/pb.ProjectResponse'
+      summary: View Project
+      tags:
+      - projects
+    put:
+      consumes:
+      - application/json
+      description: Update a project
+      parameters:
+      - description: ProjectReq
+        in: body
+        name: requestBody
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.ProjectReq'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/pb.ProjectResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/pkg_task_handlers.ErrResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/pb.ProjectResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/pb.ProjectResponse'
+      summary: Update Project
+      tags:
+      - projects
   /register:
     post:
       consumes:
@@ -108,7 +342,7 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/handlers.ErrResponse'
+            $ref: '#/definitions/pkg_auth_handlers.ErrResponse'
         "409":
           description: Conflict
           schema:
@@ -135,11 +369,11 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/handlers.ErrResponse'
+            $ref: '#/definitions/pkg_auth_handlers.ErrResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/handlers.ErrResponse'
+            $ref: '#/definitions/pkg_auth_handlers.ErrResponse'
         "404":
           description: Not Found
           schema:
@@ -151,9 +385,4 @@ paths:
       summary: View user
       tags:
       - users
-securityDefinitions:
-  BearerAuth:
-    in: header
-    name: Authorization
-    type: apiKey
 swagger: "2.0"
